Bug 531763 - [9] replace provisional API in JavaModelAccess used by jdt.debug
Change-Id: Ia3259dfc57f376b613f1a2c7dcfa188997874e2d